--- a/ietf/templates/meeting/agenda_list.html
+++ b/ietf/templates/meeting/agenda_list.html
@@ -37,6 +37,10 @@
 <p>Meeting {{meeting.number}}</p>
 </div>
 
+<div class="agenda_list_edit">
+<p><a href="{% url ietf.meeting.views.edit_timeslots meeting.number %}">Edit Timeslots</a></p>
+</div>
+
 <div class="agenda_list">
 <table>
   <tr>
@@ -48,16 +52,20 @@
   {% for agenda in schedules %}
     <tr>
       <td class="agenda_data">
-        <a href="{{agenda.relurl}}"><span class="agenda_name">{{ agenda.name }}</span></a>
+        <a href="{% url ietf.meeting.views.edit_agenda agenda.meeting.number agenda.name %}"><span class="agenda_name">{{ agenda.name }}</span></a>
       </td>
       <td class="agenda_data"> <span class="agenda_owner">{{ agenda.owner }}</span> </td>
-      <td class="agenda_data"> <span href="{{agenda.relurl}}" value="{{agenda.visible}}" class="agenda_visible {{agenda.visible_class}}">{{ agenda.visible_token }}</span></a></td>
-      <td class="agenda_data"> <span class="agenda_public {{agenda.public_class}}">{{ agenda.public_token }}</span></td>
+      <td class="agenda_data"> <span href="{{agenda.relurl}}" class="agenda_visible {{agenda.visible_class}}">{{ agenda.visible_token }}</span></a></td>
+      <td class="agenda_data"> <span href="{{agenda.relurl}}" class="agenda_public {{agenda.public_class}}">{{ agenda.public_token }}</span></td>
       <td class="agenda_mark"> <span class="agenda_official">{{ agenda.official_token }}</span></td>
-      <td class="agenda_mark"> <span class="agenda_delete">DELETE</span> </td>
+      <td class="agenda_mark agenda_data"> <span href="{{agenda.relurl}}" class="agenda_delete">DEL</span> </td>
     </tr>
   {% endfor %}
 </table>
+</div>
+
+<div class="dialog" id="agenda_delete_dialog">
+     Are you sure you want to delete this agenda?
 </div>
 
 <div class="towtruck">
