--- a/ietf/templates/meeting/agenda_list.html
+++ b/ietf/templates/meeting/agenda_list.html
@@ -9,6 +9,7 @@
 {% load agenda_custom_tags %}
 {% block pagehead %}
 <link rel='stylesheet' type='text/css' href='/css/ietf.css' />
+<link rel='stylesheet' type='text/css' href='/css/jquery-ui-themes/jquery-ui-1.8.11.custom.css' />
 
 <script type='text/javascript' src='/js/jquery-1.8.2.min.js'></script>
 <script type='text/javascript' src='/js/jquery-ui-1.9.0.custom/jquery-ui.custom.js'></script>
