fix highlighting of sessions. Due to use of slot class to indicate the slot type, it becomes to hack the class of that object to show conflicts, so instead hack the border on the subtable. This requires knowing the list of all the sessions attached to each group

--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -437,7 +437,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99beff', end
 }
 
 .show_conflict_view_highlight{
-    background-color:red;
+    background-color: red;
+}
+
+.show_conflict_specific_box {
+  border: 5px solid red;
 }
 
 /* ::-webkit-scrollbar{ */
