--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -561,7 +561,7 @@ table.actual_conflict {
 
 
 #show_all{
-    
+
 
 }
 
@@ -730,4 +730,21 @@ div.line{
   transform-origin: 0 100%;
   height: 3px; /* Line width of 3 */
   background: #000; /* Black fill */
+}
+
+#read_only {
+    position: relative;
+    margin-top: 15px;
+    margin-bottom: 4px;
+    margin-left: 40%;
+    padding: 2px 6px;
+    font-size: 16pt;
+    width: 500px;
+    text-align: center;
+    border: 2px double;
+    border-radius: 9px;
+}
+
+#read_only p {
+    padding: 0px;
 }
