--- a/ietf/templates/meeting/agenda_list.html
+++ b/ietf/templates/meeting/agenda_list.html
@@ -53,14 +53,15 @@
   </tr>
   {% for agenda in schedules %}
     <tr agenda_name="{{agenda.name}}" id="agenda_name_{{agenda.name|slugify}}" href="{{agenda.relurl}}" class="{{agenda.official_class}}_row">
-      <td class="agenda_mark agenda_data"> <span class="agenda_official_mark {{agenda.official_class}}">{{ agenda.official_token }}</span></td>
+      <td class="agenda_mark agenda_data"> <span class="styled_button agenda_official_mark {{agenda.official_class}}">{{ agenda.official_token }}</span></td>
       <td class="agenda_data">
         <a href="{% url ietf.meeting.views.edit_agenda agenda.meeting.number agenda.name %}"><span class="agenda_name">{{ agenda.name }}</span></a>
       </td>
       <td class="agenda_data"> <span class="agenda_owner">{{ agenda.owner }}</span> </td>
       <td class="agenda_data"> <span class="agenda_visible {{agenda.visible_class}}">{{ agenda.visible_token }}</span></a></td>
       <td class="agenda_data"> <span class="agenda_public {{agenda.public_class}}">{{ agenda.public_token }}</span></td>
-      <td class="agenda_mark agenda_data"> <span class="agenda_delete">DEL</span> </td>
+      <td class="agenda_mark agenda_data"> <span class="styled_button agenda_edit">EDIT</span> </td>
+      <td class="agenda_mark agenda_data"> <span class="styled_button agenda_delete">DEL</span> </td>
     </tr>
   {% endfor %}
 </table>
