--- a/ietf/templates/meeting/agenda_list.html
+++ b/ietf/templates/meeting/agenda_list.html
@@ -53,7 +53,7 @@
     <th>Public</th>
   </tr>
   {% for agenda in schedules %}
-    <tr agenda_name="{{agenda.name}}" id="agenda_name_{{agenda.name|slugify}}" href="{{agenda.relurl}}" class="{{agenda.official_class}}_row">
+    <tr agenda_name="{{agenda.name}}" id="agenda_name_{{agenda.name|slugify}}" href="{{agenda|args:sitefqdn|call:"url"}}" class="{{agenda.official_class}}_row">
       <td class="agenda_mark agenda_data"> <span class="styled_button agenda_official_mark {{agenda.official_class}}">{{ agenda.official_token }}</span></td>
       <td class="agenda_data">
         <a href="{% url ietf.meeting.views.edit_agenda agenda.meeting.number agenda.name %}"><span class="agenda_name">{{ agenda.name }}</span></a>
@@ -70,6 +70,10 @@
 
 <div class="dialog" id="agenda_delete_dialog">
      Are you sure you want to delete this agenda?
+</div>
+
+<div class="dialog" id="agenda_notpublic_dialog">
+     You can not mark an agenda as official, if it is not public.
 </div>
 
 <div class="towtruck">
