show special requests in new box mark sessions with requests (length > 0 and not None) with a leading star

--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -327,8 +327,10 @@ div#conflict_table {
 }
 
 #special_requests {
+    text-align: left;
     min-height: 30px;
-    overflow: scroll;
+    width: 620px;
+    overflow: auto;
     border: 1px solid #89D;
     background-color: #EDF5FF;
     border-spacing:0;
