when a session is placed on the bucket list, send a signal that this is so, and add the bucket list class to style is correctly

--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -62,8 +62,11 @@
 }
 
 div.meeting_box {
-    height: 23px;
     width:  98px;
+}
+
+div.meeting_box_bucket_list {
+    height: 23px;
     float: left;
 }
 
